page behaves like a still image when resizing with cmd +/- . when resizing from borders everything collapses except quote. need to fix spacing in container because the collapse causes huge spacing in the container.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 body {
     display: flex; 
-    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     margin: 0; 
     padding: 0;
 }
@@ -64,6 +62,7 @@ button {
     color: white;
     border-radius: 10px;
     font-weight: bold;
+    padding: 5px;
 }
 
 .Awesome, .text, .button {
